[package]
name = "project"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.15.3"
bevy-inspector-egui = "0.30.0"
bevy_egui = "0.33.0"
bevy_panorbit_camera = "0.25.0"
bytemuck = "1.22.0"
evalexpr = "12.0.2"
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
rayon = "1.10.0"

[profile.dev]
opt-level = 1

[profile.dev.package.bevy]
opt-level = 3
